[project]
name = "requirementviewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hjson>=3.1.0",
    "networkx==3.4.2",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "streamlit>=1.53.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
