[project]
name = "requirementviewer"
version = "0.2.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hjson>=3.1.0",
    "networkx>=3.4.2",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "pillow>=12.1.1",
    "plotly>=6.5.2",
    "streamlit>=1.53.1",
    "workdays>=1.4",
    "tornado>=6.5.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
