[project]
name = "requirementviewer"
version = "0.2.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hjson>=3.1.0",
    "networkx>=3.4.2",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "pillow>=12.2.0",
    "plotly>=6.5.2",
    "streamlit>=1.54.0",
    "workdays>=1.4",
    "tornado>=6.5.5",
    "requests>=2.33.0",
    "pygments>=2.20.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
